--- a/projects/client/src/app/components/header/header.component.html
+++ b/projects/client/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/dashboard">
-      <i class="bi bi-hexagon-fill"></i> OPTIROUTE
+      <i class="bi bi-hexagon-fill"></i> Around Noon
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
